--- a/react-vite/src/components/Camera/Mirror.css
+++ b/react-vite/src/components/Camera/Mirror.css
@@ -1,11 +1,16 @@
 #ar-screen {
     width: 80%;
-    height: 90%;
+    height: 100%;
     margin: 0 auto;
     border-left: 4px solid black;
     border-right: 4px solid black;
-    box-shadow: 0px 0px 50px 0px #00c4cc;
+    border-top: 8px solid black;
+    border-bottom: 3px solid black;
     position: relative;
+    border-radius: 10px;
+    box-shadow: 0px 2px 20px 3px black;
+
+
 
 }
 
@@ -14,58 +19,25 @@
     height: 920px;
     display: flex;
     align-items: center;
-    background-color:black;
-
-}
-
-#start-ar-btn {
-    width: 100%;
-    padding: 1rem;
-    font-size: 25px;
-    font-weight: light;
-    border-radius: 20px;
-    background-color: #5ce4b0;
-    color: #f6f7f8;
-    border: 3px solid #00c4cc;
-    margin-bottom: 2rem;
-
-
-
-
-
-}
-
-#before-load {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-image: url('../../../public/Images/drywall.jpg');
+    background-repeat: none;
     background-size: contain;
-}
 
-#bl-content-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+
 
 }
 
-#before-load h1 {
-    color: #00c4cc;
-    font-size: 6rem;
-    font-weight: light;
-    margin-top: 2rem;
-
-
-}
 
 #screen-container {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-top: 1rem;
+
+
+
+
 
 
 
@@ -77,7 +49,7 @@
     width: stretch;
     border: 3px solid #00c4cc;
     height: 10%;
-
+    margin-top: 1rem;
 
 }
 
@@ -88,6 +60,7 @@
     height: 100%;
     background-color: rgb(189, 28, 28);
     border: 4px solid rgb(143, 8, 8);
+    cursor: pointer;
 
 }
 
@@ -138,7 +111,7 @@
     height: 3rem;
     border: 2px solid white;
     margin: 0 auto;
-    
+
 }
 
 #progress-status {
