--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -42,18 +42,20 @@ margin: 5rem;
 }
 
 #hp-try-btn {
-    background-color: rgb(82, 236, 198);
+
+    background-color: rgb(3, 248, 187);;
     text-align: center;
-    width: 40%;
+    width: 60%;
     margin-top: 5rem;
     padding: 2rem;
     border-radius: 5rem;
-    font-size: 3rem;
-    color: white;
-    font-weight: bold;
+    font-size: 30px;
+    color: #ffffff;
+    font-weight: light;
     cursor: pointer;
+    
 }
 
 #hp-try-btn:hover {
-    background-color: rgb(0, 235, 176);
+    background-color: rgb(7, 224, 170);
 }
