--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -6,6 +6,7 @@
 list-style: none;
 display: flex;
 justify-content: space-around;
+height: 100%;
 
 }
 
@@ -13,20 +14,26 @@ justify-content: space-around;
 .nav-container a {
   color: white;
   text-decoration: none;
-  font-size: 2rem;
-  font-weight: light;
+  font-size: 25px;
   margin-top: 1rem;
+
 }
 
 .nav-container {
   width: 100%;
-  height: 9rem;
+  border-bottom: 3px solid rgb(0, 0, 0);
+  background-color: #3b103f;
+  height: 4rem;
+
+
 
 }
 
 #menu-dropdown {
-  font-size: 5rem;
+  font-size: 6vh;
   position: absolute;
-  top: 1rem;
-  right: 1rem;
+  top: 0;
+  right: 0;
+
+
 }
