--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -21,8 +21,8 @@ height: 100%;
 
 .nav-container {
   width: 100%;
-  border-bottom: 3px solid rgb(0, 0, 0);
-  background-color: #3b103f;
+  border-bottom: 3px solid rgb(255, 3, 255);
+  background-color: #000000;
   height: 4rem;
 
 
