--- a/react-vite/src/components/Camera/Mirror.css
+++ b/react-vite/src/components/Camera/Mirror.css
@@ -1,6 +1,7 @@
 #ar-screen {
     width: 80%;
-    height: 100%;
+    min-width: 60%;
+    height: 90%;
     margin: 0 auto;
     border-left: 4px solid black;
     border-right: 4px solid black;
@@ -16,14 +17,10 @@
 
 .deepar-container {
     width: 100%;
-    height: 920px;
+    height: 800px;
     display: flex;
     align-items: center;
-    background-image: url('../../../public/Images/drywall.jpg');
-    background-repeat: none;
-    background-size: contain;
-
-
+    background-color: rgb(121, 107, 122);
 
 }
 
@@ -35,21 +32,16 @@
     flex-direction: column;
     margin-top: 1rem;
 
-
-
-
-
-
-
-
 }
 
 #ar-options {
+    position: fixed;
+    bottom: 0;
     display: flex;
-    width: stretch;
-    border: 3px solid #00c4cc;
+    min-width: 100%;
+    border: 1px solid black;
     height: 10%;
-    margin-top: 1rem;
+
 
 }
 
@@ -58,9 +50,13 @@
     border-radius: 100%;
     width: 100%;
     height: 100%;
-    background-color: rgb(189, 28, 28);
-    border: 4px solid rgb(143, 8, 8);
+    background-color: rgb(204, 33, 62);
+    border: 4px solid rgb(12, 12, 12);
     cursor: pointer;
+    font-size:50px;
+    text-align: center;
+    color: rgb(255, 255, 255);
+
 
 }
 
@@ -75,46 +71,34 @@
 
 .effect-option {
     display: grid;
-    width: 25%;
+    width: 100%;
     height: 100%;
     text-align: center;
 }
 
 .effect-option select {
     text-align: center;
-    font-weight: bold;
+    font-weight: light;
     font-size: 16px;
+    background-color: rgb(36, 34, 39);
+    color: rgb(233, 135, 212);
+    padding: 5px;
+    width: 100%;
+    outline-style: dashed;
 }
 
 .effect-option label {
     font-size: 2rem;
-    background-color: #5ce4b0;
-    color: #f6f7f8;
-    border-bottom: 3px solid black;
+    background-color: rgb(235, 178, 216);
+    color: #3b3d3f;
+    border-bottom: 5px solid black;
     border-top: 3px solid black;
+    width: 100%;
+    font-weight: 300;
 }
 
 #skin-options,
 #eye-options,
 #lip-options {
     border-right: 3px solid black;
-}
-
-.progress-bar__container {
-    width: 100%;
-    text-align: center;
-
-}
-
-.progress-bar {
-    width: 80%;
-    height: 3rem;
-    border: 2px solid white;
-    margin: 0 auto;
-
-}
-
-#progress-status {
-    color: white;
-    font-size: 20px;
 }
