--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -7,6 +7,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+
+
 }
 
 #modal-background {
@@ -20,5 +23,12 @@
 
 #modal-content {
   position: absolute;
-  background-color:white;
+  background-color:rgb(224, 223, 223);
+  width: 50%;
+  border: 2px solid black;
+  padding: 30px;
+  box-shadow: 0px 0px 20px 20px black;
+
+
+
 }
