--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -1,5 +1,9 @@
 .profile-dropdown {
+  background-color: rgba(0,0,0,0.7);
   position: absolute;
+  top: 4.2rem;
+  right: 0;
+  
 }
 
 .nav-container ul{
@@ -33,7 +37,8 @@ height: 100%;
   font-size: 6vh;
   position: absolute;
   top: 0;
-  right: 0;
+  right: 1rem;
+
 
 
 }
