--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -1,61 +1,105 @@
 .hp-container {
-    display: flex;
-    width: 100%;
+    display: block;
+}
+
+#hp-cta a {
+    font-size: 4rem;
+    color: rgb(0, 0, 0);
+    font-weight: 300;
+    box-shadow: 10px 0px 500px 0px rgb(78, 90, 122);
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    background-color: rgb(233, 103, 211);
+    border-top: 3px solid black;
+    text-decoration: none;
+    width: 50%;
 
 }
 
-.headline-wrapper {
-width: 60%;
-margin-left: 5rem;
-margin-top: 10rem;
-
-
-}
-#hp-title {
-    font-size: 9rem;
-    color: #f185df;
-    font-weight: light;
-}
-
-#hp-headline{
-    font-size: 3rem;
+#hp-title h1 {
+    font-size: 10rem;
+    text-decoration: none;
     color: white;
+    font-weight: 300;
 
+}
+
+#hp-headline {
+    font-size: 3rem;
+    color: black;
 }
 
 #hp-subheadline {
-    color: rgb(245, 235, 235);
+    color: black;
+    font-style: italic;
+    margin-bottom: 1rem;
 }
 
-.hp-image-wrapper {
-width: 40%;
-text-align: right;
-}
+.hp-top-container {
 
-#hp-image {
-border-radius: 50%;
-width: 450px;
-height: fit-content;
-border: 4px solid rgb(209, 19, 216);
-margin: 5rem;
+    border-top: 4px solid rgb(255, 3, 255);
+
+}
+#hp-headline,
+#hp-subheadline {
+    margin-left: 2rem;
 
 }
 
-#hp-try-btn {
 
-    background-color: rgb(209, 19, 216);
+#hp-cta {
+    display:flex;
+    align-items: start;
+    flex-direction: column;
+}
+
+.problem-container,
+.guide-container {
+    display: grid;
+    width: 100%;
     text-align: center;
-    width: 60%;
-    margin-top: 5rem;
-    padding: 2rem;
-    border-radius: 5rem;
-    font-size: 30px;
-    color: #ffffff;
-    font-weight: light;
-    cursor: pointer;
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0px 3px 40px 60px black;
 
 }
 
-#hp-try-btn:hover {
-    background-color: rgb(190, 26, 196);
+#collage-image {
+    width: 90%;
+    margin: auto;
+}
+
+#problem-text-wrapper,
+#guide-text-wrapper {
+
+    border-top: 4px solid rgb(255, 3, 255);
+    background-color: rgb(0, 0, 0);
+    padding: 1rem;
+
+}
+
+#problem-text-wrapper h1,
+#guide-text-wrapper h1
+ {
+    color: white;
+    font-size: 3rem;
+    padding: 1rem;
+}
+
+#problem-text-wrapper p,
+#guide-text-wrapper p {
+    color: rgb(245, 235, 235);
+    padding: 1rem;
+}
+
+#guide-text-wrapper h2 {
+    font-size: 2rem;
+    color: rgb(233, 103, 211);
+}
+
+#guide-video-container {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    margin: 0 auto;
+    gap: 3rem;
+
 }
