--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -3,8 +3,19 @@
   position: absolute;
   top: 4.2rem;
   right: 0;
-  
+
 }
+
+.user-cred-options li {
+  cursor: pointer;
+}
+
+
+.user-cred-options li:hover {
+  color: rgb(209, 19, 216);
+}
+
+
 
 .nav-container ul{
 list-style: none;
@@ -20,14 +31,14 @@ height: 100%;
   text-decoration: none;
   font-size: 25px;
   margin-top: 1rem;
-
 }
+
+
 
 .nav-container {
   width: 100%;
-  border-bottom: 3px solid rgb(255, 3, 255);
   background-color: #000000;
-  height: 4rem;
+
 
 
 
@@ -38,7 +49,5 @@ height: 100%;
   position: absolute;
   top: 0;
   right: 1rem;
-
-
 
 }
