--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #533e72;
+    background-color: #ec80c8;
     display: block;
     overflow: scroll;
     touch-action: manipulation;
