--- a/react-vite/src/components/Camera/Mirror.css
+++ b/react-vite/src/components/Camera/Mirror.css
@@ -20,7 +20,8 @@
     height: 800px;
     display: flex;
     align-items: center;
-    background-color: rgb(121, 107, 122);
+    background-color: black;
+    border-top: 4px solid rgb(255, 3, 255);
 
 }
 
@@ -80,21 +81,20 @@
     text-align: center;
     font-weight: light;
     font-size: 16px;
-    background-color: rgb(36, 34, 39);
-    color: rgb(233, 135, 212);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     padding: 5px;
     width: 100%;
-    outline-style: dashed;
+
 }
 
 .effect-option label {
     font-size: 2rem;
-    background-color: rgb(235, 178, 216);
-    color: #3b3d3f;
-    border-bottom: 5px solid black;
-    border-top: 3px solid black;
-    width: 100%;
-    font-weight: 300;
+    background-color: #ec80c8;
+    color: rgb(0, 0, 0);
+  
+    font-weight: 400;
+    border-right: 4px solid rgb(0, 0, 0);
 }
 
 #skin-options,
