--- a/react-vite/src/context/Modal.css
+++ b/react-vite/src/context/Modal.css
@@ -25,8 +25,7 @@
   position: absolute;
   background-color:rgb(224, 223, 223);
   width: 50%;
-  border: 2px solid black;
-  padding: 30px;
+  border: 2px solid pink;
   box-shadow: 0px 0px 20px 20px black;
 
 
