--- a/react-vite/src/components/ManageAccountPage.jsx/ManageAccountPage.css
+++ b/react-vite/src/components/ManageAccountPage.jsx/ManageAccountPage.css
@@ -1,9 +1,84 @@
 .manage-account-container{
-color: black;
+background-color: black;
+height: 100vh;
+padding: 1rem;
+
+
+
+}
+
+.manage-account-container h1 {
+    color: white;
+
+
+
+}
+
+#manage-headline {
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+    font-size: 3rem;
+    text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(132, 132, 151), 0 0 0.2em rgb(255, 0, 191);
+
+}
+
+.manage-account-container p {
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(255, 0, 170);
+    width: 100%;
+
+}
+
+.manage-account-container span {
+    color: white;
+}
+
+
+
+.edit-user-cred-wrapper {
 display: grid;
-background-color: rgb(163, 159, 159);
+gap: 1rem;
+border-bottom: 4px solid white;
 width: 50%;
-height: 100vh
+margin-bottom: 1rem;
+margin-top: 1rem;
+
+}
+
+.edit-subscription-wrapper {
+display: grid;
+border-bottom: 4px solid white;
+width: 70%;
+
+}
+
+.edit-password-wrapper {
+display: block;
+font-weight: 500;
+}
+
+#password-container {
+display: flex;
+width: fit-content;
+position: relative;
+gap: 5px;
+
+
+}
+
+#password-container input {
+    border: 2px solid black;
+    background-color: rgb(238, 236, 236);
+
+}
+
+#show-password {
+    border: none;
+    position: absolute;
+    right: 3px;
+    top: 3px;
+    background-color: rgb(238, 236, 236);
 
 
 }
@@ -15,12 +90,17 @@ height: 100vh
 #account-sub-btns {
     display: flex;
     gap: 5px;
+
 }
 
-#account-password-wrapper {
-    display: flex;
-}
-
-.edit-account-wrapper {
+.manage-btn {
+    font-size: 1rem;
+    border: 2px solid black;
+    border-radius: 20px;
+    background-color: rgb(228, 176, 202);
+    font-weight: bold;
+    padding: 1%;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 
 }
