--- a/react-vite/src/components/SignupFormModal/SignupForm.css
+++ b/react-vite/src/components/SignupFormModal/SignupForm.css
@@ -1,15 +1,26 @@
 
 .signup-modal-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
     background-color: rgb(0, 0, 0);
     text-align: center;
-    padding: 1rem;
+    height: 95vh;
+
+
 }
 
 #signup-form {
-
+    display: grid;
     color: white;
+    width: 95%;
+    margin: 0 auto;
+
+
 
 }
+
 
 #signup-title {
     font-size: 3rem;
@@ -23,15 +34,14 @@
 }
 
 #signup-form input {
-    width: 100%;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+width: 100%;
+
+
 
 }
 
 #signup-form button {
-    padding: 5px;
-    width: 30%;
+    padding: 3px;
     border-radius: 30px;
     text-align: center;
     font-size: 1rem;
@@ -39,7 +49,9 @@
     font-weight: 500;
     background-color: rgb(209, 6, 192);
     border: 2px solid white;
-    margin-top: 1rem;
+    width: 80%;
+    margin: 0 auto;
+
 }
 
 
@@ -48,12 +60,13 @@
     font-size: 1rem;
     color: white;
     font-weight: bold;
+
 }
 
 .subscription-container {
     display: grid;
     width: 100%;
-    
+
 }
 
 .subscription-container h1 {
@@ -66,5 +79,11 @@
 }
 
 .duration-wrapper {
-    display: flex;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    text-align: center;
+    padding: 1rem;
+
 }
