--- a/react-vite/src/components/AboutPage/AboutPage.css
+++ b/react-vite/src/components/AboutPage/AboutPage.css
@@ -1,10 +1,11 @@
 
 .about-page-container {
     background-color: black;
-
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 20vh;
+
 
 }
 
@@ -12,8 +13,10 @@
     display: grid;
     text-align: center;
     color: white;
+    gap: 1rem;
 }
 
 .about-wrapper h1 {
     font-size: 3rem;
+    color: rgb(255, 0, 170);
 }
